2007-11-19  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-progress-info.[ch]:
	Add nautilus_get_all_progress_info()
	
        * test/test-copy.c:
	Print progress info
	
        * libnautilus-private/nautilus-file-operations.c:
	Implement generic run_simple_dialog()

2007-11-19  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Add generic run_simple_dialog.

2007-11-16  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-progress-info.c:
	Fix signal emissions

        * libnautilus-private/nautilus-file-operations.[ch]:
	Add nautilus_file_operations_copy, with some initial
	(far from done) code
	
        * test/Makefile.am:
        * test/test-copy.c:
	nautilus_file_operations_copy testcase

2007-11-16  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-progress-info.c:
	Reindent
	Fix threading issues wrt the idle source

2007-11-16  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/Makefile.am:
        * libnautilus-private/nautilus-progress-info.[ch]:
	Added NautilusProgressInfo class
	
        * libnautilus-private/nautilus-file-operations.c:
        * src/file-manager/fm-tree-view.c:
        * src/nautilus-places-sidebar.c:
	Update to new gio API

2007-11-13  Alexander Larsson  <alexl@redhat.com>

        * src/file-manager/fm-error-reporting.c:
	Remove last use of GNOME_VFS_ERROR
	
        * libnautilus-private/Makefile.am:
        * libnautilus-private/nautilus-vfs-utils.[ch]: Removed.
        * src/file-manager/fm-directory-view.c:
        * src/nautilus-window-manage-views.c:
	Remove GNOME_VFS_ERROR

2007-11-13  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-window-manage-views.c:
        * src/nautilus-window-private.h:
	Better error reporting on view failure

2007-11-13  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-window-manage-views.c: